Theme refresh and Swagger Docs in UI
- Swagger API documentation included in API page
- API Keys page generalised to Developer page
- Added new permission for view_api_docs
- Adjusted theme for light and dark mode
